attempted to fix overflow

--- a/index.css
+++ b/index.css
@@ -158,7 +158,7 @@ nav{
 }
 @media screen and (max-width: 800px){
     .aboutMe{
-        width: 99%;
+        width: 93%;
         margin: auto;
         margin-top: 50px;
     }
